--- a/sass/styles.css
+++ b/sass/styles.css
@@ -411,7 +411,9 @@ html, body {
   border: 0.0625rem solid #000000;
   border-radius: 1.125rem;
   margin: 1em auto 3.4em auto;
-  padding: 1.7em 0;
+  display: flex;
+  justify-content: space-around;
+  padding: 2em 0;
 }
 .pricing__offers-container__offer--basic {
   border-color: #FB3B64;
@@ -423,10 +425,11 @@ html, body {
   border-color: #55DFB4;
 }
 .pricing__offers-container__offer__left {
-  padding: 3em 40% 3em 0;
+  width: 50%;
   text-align: center;
 }
 .pricing__offers-container__offer__left__title {
+  margin-top: 2.3em;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 1.25rem;
@@ -453,21 +456,15 @@ html, body {
   font-size: 0.75rem;
   line-height: 0.875rem;
 }
-.pricing__offers-container__offer__right {
-  position: absolute;
-  left: 58%;
-  top: 2%;
-}
 .pricing__offers-container__offer__right__container {
   word-spacing: 2px;
-  margin-top: 1.7em;
 }
 .pricing__offers-container__offer__right__container__check {
   margin-bottom: 1.2em;
   list-style-image: url("../img/Checkbox.png");
 }
 .pricing__offers-container__offer__right__container__cross {
-  margin-top: 1.2em;
+  margin-bottom: 1.2em;
   list-style-image: url("../img/Cross.png");
 }
 .pricing__offers-container__offer__button {
@@ -487,7 +484,6 @@ html, body {
 }
 .pricing__offers-container__offer__button--basic {
   background-color: #EB476E;
-  transform: translate(-50%, calc(-50% + 9.2em));
 }
 .pricing__offers-container__offer__button--professional {
   background-color: #07ACE6;
@@ -504,7 +500,7 @@ html, body {
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    gap: 3em;
+    gap: 5em;
   }
   .pricing__offers-container__offer--basic:hover {
     transform: scale(1.1);
@@ -521,15 +517,21 @@ html, body {
   .pricing__offers-container__offer {
     flex: 1;
     position: relative;
+    flex-direction: column;
+    align-items: center;
   }
   .pricing__offers-container__offer__left {
-    padding: 0;
+    margin-bottom: 2em;
+  }
+  .pricing__offers-container__offer__left__title {
+    margin: 0;
   }
   .pricing__offers-container__offer__left__price--basic {
-    padding-bottom: 0.3em;
+    margin-bottom: 0.3em;
   }
   .pricing__offers-container__offer__right {
     position: static;
+    margin-bottom: 2em;
   }
   .pricing__offers-container__offer__right__container {
     display: flex;
@@ -545,7 +547,7 @@ html, body {
     margin: 0.8em auto;
   }
   .pricing__offers-container__offer__button {
-    transform: translate(-50%, calc(-50% + 15.2em));
+    transform: translate(-50%, calc(-50% + 17.2em));
   }
 }
 
